# unity-reskin-pipeline

./: .gitignore  .vercelignore  Dockerfile  UNITY_BUILD_GUIDE.md  pyproject.toml  railway.toml  requirements.txt  vercel.json
.github/: trigger-build
.github/workflows/: unity-activate.yml  unity-webgl-build.yml
api/: index.py
examples/: dracula_gothic.yaml
templates/unity-scripts/: GamePauser.cs  SkinLoader.cs  TextureSwapper.cs
templates/unity-scripts/Plugins/WebGL/: WebGLBridge.jslib
templates/unity-webgl/: index.html
unity_reskin/: __init__.py  baker.py  cli.py  config.py  consistency.py  extractor.py  generator.py  packager.py  sprite_atlas.py  unity_meta.py  utils.py
web/api/: jobs.py  main.py  models.py
web/frontend/: index.html  package-lock.json  package.json
web/frontend/public/unity/: bridge.js  index.html
web/frontend/public/unity/StreamingAssets/aa/: catalog.json
web/frontend/public/unity/StreamingAssets/aa/WebGL/: 741b3a70ffd460d9708af718a7fda159_unitybuiltinshaders_23b1540cee6504cc8d4d773a1efca312.bundle  characters_assets_all_da721b0a2dfff331fa80ac6dce32354b.bundle  coin_assets_all_bdc48676ae8b863d8cc3067bdb2bc25d.bundle  day-theme-obstacles_assets_all_d718979c9089c34175d34a6b44ada0b8.bundle  (+9 more)
web/frontend/src/: App.jsx  index.css
web/frontend/src/components/: CharacterStudio.jsx  CharacterViewer.jsx  CreateJobForm.jsx  CustomizePanel.jsx  GamePanel.jsx  JobCard.jsx  JobDetail.jsx  SkinScreen.jsx
web/frontend/src/hooks/: useApi.js  useMeshyRetexture.js  useSkinBaker.js  useUnityBridge.js
